--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -16,7 +16,7 @@ library(caret)
 training <- read.csv('pml-training.csv')
 testing <- read.csv('pml-testing.csv')
 partition <- createDataPartition(y=training$classe,
-                          p=.7,list=F)
+                                 p=.7,list=F)
 train1 <- training[partition,]
 test1 <- training[-partition,]
 ```
@@ -43,11 +43,14 @@ After it ran for awhile without completing, I realized that it probably was too 
 
 ## Selecting the data
 
-To save on computation time I switched to using only 30% of the data for training, leaving the rest for testing. 
+To save on computation time I switched to using only 30% of the data for training, leaving the rest for testing. There were initially `r dim(training)[1]` datapoints provided for training, so 
+using 30% for training the model is still plenty of data. Ideally I would have used closer 70% for training, but I wanted the program to run in reasonable time.
 
-```{r}
+
+```{r,cache=TRUE,message=FALSE}
+set.seed(3000)
 partition <- createDataPartition(y=training$classe,
-                          p=.3,list=F)
+                                 p=.3,list=F)
 train1 <- training[partition,]
 test1 <- training[-partition,]
 ```
@@ -65,11 +68,11 @@ qplot(x=roll_belt,y=pitch_belt,col=classe,data=train1)
 The first training I tried to do with this data was a random forest using only the four main variables 
 associated with belt, `roll_belt, pitch_belt, yaw_belt, total_accel_belt`. 
 This was arbitrary, I only used them because they were the first columns that looked 
-meaningful data. 
-This took about ten minutes to run.
+like meaningful data. 
 
 ```{r,message=FALSE,cache=TRUE}
-modFit <- train(classe ~ roll_belt + pitch_belt + yaw_belt + total_accel_belt, data=train1, method='rf')
+modFit <- train(classe ~ roll_belt + pitch_belt + yaw_belt + total_accel_belt, 
+                data=train1, method='rf')
 test1$predicted <- predict(modFit,test1)
 test1$correct <- test1$classe==test1$predicted
 confusionMatrix(test1$predicted,test1$classe)
@@ -77,33 +80,32 @@ confusionMatrix(test1$predicted,test1$classe)
 
 This predicts the classe of the test variables with .849 accuracy, which is superb for using on 30% of the data and 
 only four of the columns of the data. 
-I decided to redo the model adding the four variables associated with arm and forearm. This still omits most 
+I decided to redo the model adding the four variables associated with dumbbell. This still omits most 
 of the columns from the spreadsheet, but using all of the useful data would take far to long to calculate. 
-
-
-
 
 
 
                 
 ```{r,message=FALSE,cache=TRUE}
 modFit <- train(classe ~ roll_belt + pitch_belt + yaw_belt + total_accel_belt +
-                  roll_dumbbell+pitch_dumbbell+yaw_dumbbell + total_accel_dumbbell,
+                roll_dumbbell+pitch_dumbbell+yaw_dumbbell + total_accel_dumbbell,
                 data=train1,method='rf')
 test1$predicted <- predict(modFit,test1)
 test1$correct <- test1$classe==test1$predicted
 confusionMatrix(test1$predicted,test1$classe)
 ```                
                 
-                
+Not surprisingly, this model did even better getting accuracy around 93%.
+I wanted to get the accuracy over 95%, so I decided to add eight more variables, 
+the four associated with each of arm and forearm.
 
 
                 
 ```{r,message=FALSE,cache=TRUE}
 modFit <- train(classe ~ roll_belt + pitch_belt + yaw_belt + total_accel_belt +
-                  roll_dumbbell+pitch_dumbbell+yaw_dumbbell + total_accel_dumbbell + 
-                  roll_arm + pitch_arm + yaw_arm + total_accel_arm + 
-                  roll_forearm + pitch_forearm + yaw_forearm + total_accel_forearm, 
+                roll_dumbbell+pitch_dumbbell+yaw_dumbbell + total_accel_dumbbell + 
+                roll_arm + pitch_arm + yaw_arm + total_accel_arm + 
+                roll_forearm + pitch_forearm + yaw_forearm + total_accel_forearm, 
                 data=train1,method='rf') 
 test1$predicted <- predict(modFit,test1)
 test1$correct <- test1$classe==test1$predicted
@@ -111,63 +113,49 @@ confusionMatrix(test1$predicted,test1$classe)
 ```         
 
 
-```
-Confusion Matrix and Statistics
-
-          Reference
-Prediction    A    B    C    D    E
-         A 3855   50    3    2    3
-         B   20 2532   56    1   13
-         C   11   54 2309   39   15
-         D   16   10   27 2207   17
-         E    4   11    0    2 2476
-
-Overall Statistics
-                                          
-               Accuracy : 0.9742          
-                 95% CI : (0.9714, 0.9768)
-    No Information Rate : 0.2844          
-    P-Value [Acc > NIR] : < 2.2e-16       
-                                          
-                  Kappa : 0.9674          
- Mcnemar's Test P-Value : 3.963e-10       
-
-Statistics by Class:
-
-                     Class: A Class: B Class: C Class: D Class: E
-Sensitivity            0.9869   0.9530   0.9641   0.9805   0.9810
-Specificity            0.9941   0.9919   0.9895   0.9939   0.9985
-Pos Pred Value         0.9852   0.9657   0.9510   0.9693   0.9932
-Neg Pred Value         0.9948   0.9887   0.9924   0.9962   0.9957
-Prevalence             0.2844   0.1935   0.1744   0.1639   0.1838
-Detection Rate         0.2807   0.1844   0.1681   0.1607   0.1803
-Detection Prevalence   0.2849   0.1909   0.1768   0.1658   0.1815
-Balanced Accuracy      0.9905   0.9724   0.9768   0.9872   0.9897
-```
 
 ## Submission
 
 97% accuracy is fantastic so I decided that I would use this model for the assignment submission. I used the predict 
 function to get predictions for the testing data.
 
-```
-> predictions <- predict(modFit,testing)
-> predictions
- [1] B A B A A E D B A A B C B A E E A B B B
-Levels: A B C D E
+```{r,cache=TRUE,message=FALSE}
+predictions <- predict(modFit,testing)
+predictions
 ```
 
 When I submitted the files with these classifications, all of them were correct.
 
+
+## Indivual trees
+
+We can try to look at an individual tree from the forest.
+
+```{r,cache=TRUE,message=FALSE}
+tree1 <- getTree(modFit$finalModel,k=1,labelVar=T)
+dim(tree1)
+head(tree1)
+```
+
+We see that the first tree has `r dim(tree1)[1]` different splits, which means that 
+it is humongous. This large complexity means it would be hard to interpret and visualize 
+even a single tree in the random forest.
+
+
 ## Conclusion
 
-In conclusion, I used the random forest learning method in the `train` function. Computation time was a huge limitation, 
-so I had to be careful about how much data I used and how many variables were used for learning.
-I used 30% of the data for training, which is much smaller than typical, leaving 70% for testing the model.
-I got
+In conclusion, I used the random forest learning method in the `train` function. 
+Computation time was a huge limitation, so I had to be careful about how much 
+data I used and how many variables were used for learning.
+I used 30% of the data for training, which is much smaller than typical, 
+leaving 70% for testing the model.
+I started using 4 variables for learning, and ended up using 16 because 
+it gave a significant increase in testing performance.
 
 When I used the learning model of the data set aside for testing, 
-its accuracy was over 97%. 
+its accuracy was over 97%. Since there were 20 data points to categorize in the assignment,
+I would have expected to get very few wrong, probably either zero or one.
+The model worked perfectly and got all 20 correct.
 
 
 
@@ -175,17 +163,3 @@ its accuracy was over 97%.
 
 
 
-
-
-=====
-```
-Class: A Class: B Class: C Class: D Class: E
-Sensitivity            0.8777   0.8311   0.8107   0.8158   0.9233
-Specificity            0.9339   0.9669   0.9549   0.9688   0.9908
-Pos Pred Value         0.8407   0.8577   0.7916   0.8369   0.9575
-Neg Pred Value         0.9505   0.9598   0.9598   0.9641   0.9829
-Prevalence             0.2844   0.1935   0.1744   0.1639   0.1838
-Detection Rate         0.2496   0.1608   0.1414   0.1337   0.1697
-Detection Prevalence   0.2969   0.1875   0.1786   0.1598   0.1773
-Balanced Accuracy      0.9058   0.8990   0.8828   0.8923   0.9570
-```
